--- a/src/html/visitante.html
+++ b/src/html/visitante.html
@@ -5,9 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="../img/logofondo.png" type="image/x-icon">
   <title>Comunal•Visitor</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css" />
+
   <link rel="stylesheet" href="../css/visitante.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- Agregar logo malena -->
@@ -28,20 +32,14 @@
             <input type="text" value="" class="form-control" id="users-dni">
             <span id="dniOK"></span>
           </div>
-          <div class="input-field col s12">
-            <select id="mySelect">
-              <option value="" disabled selected>Choose your option</option>
-              <option value="1">Option 1</option>
-              <option value="2">Option 2</option>
-              <option value="3">Option 3</option>
-            </select>
-            <label>Materialize Select</label>
-          </div>
-          <div class="form-group">
-            <label for="users-anfitrion">Anfitrión</label>
-            <input type="text" value="" class="form-control" id="users-anfitrion">
-            </select>
-          </div>
+          <label for="">Seleccione Oficina</label>
+          <select class="selectpicker" data-live-search="true" id="users-oficina">
+            <option>Laboratoria</option>
+            <option>Enterprice-Inca</option>
+            <option>Insitum</option>
+          </select>
+          <label for="">Seleccione Anfitrion</label>
+          <select class="selectpicker" data-live-search="true" id="users-anfitrion"></select>
           <div class="form-group">
             <label for="users-email">E-mail</label>
             <input type="text" value="" class="form-control" id="users-email">
@@ -54,19 +52,9 @@
     </div>
   </div>
 
-
-  <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous">
-  </script>
-  <script type="text/javascript">
-    $(document).ready(function(){
-      $('select').formSelect();
-    });
-  </script>
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
   <script src="../js/conexion.js"></script>
   <script src="../js/validandoVisitante.js"></script>
+  <script src="../js/selectOptionsVisitante.js"></script>
 </body>
 </html>
